--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Members#new</h1>
-<p>Find me in app/views/members/new.html.erb</p>
+<h1>New Member</h1>
+
+<%= form_for @member do |f| %>
+
+  <div class='input-field'>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+<% end %>
