--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Members#index</h1>
-<p>Find me in app/views/members/index.html.erb</p>
+<h1>Members</h1>
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Short URL</th>
+    <th>Friend Count</th>
+  </tr>
+
+  <% @members.each do |member| %>
+    <tr>
+      <td><%= link_to member.name, member %></td>
+      <td><%= member.website_short_url %></td>
+      <td><%= member.friendships_count %></td>
+    </tr>
+  <% end %>
+</table
