--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -13,7 +13,7 @@
   <% @members.each do |member| %>
     <tr>
       <td><%= link_to member.name, member %></td>
-      <td><%= member.website_short_url %></td>
+      <td><%= link_to member.website_short_url, member.website_short_url if member.website_short_url.present? %></td>
       <td><%= member.friendships_count %></td>
     </tr>
   <% end %>
