--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @member.name %></h1>
 
+<%= link_to 'Friends', member_friendships_path(@member), class: 'btn' %>
+<%= link_to 'Add Friend', new_member_friendship_path(@member), class: 'btn' %>
+
 <div class='card'>
   <div class='card-content'>
     <p><%= @member.website_url %></p>
