--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -2,6 +2,7 @@
 
 <%= link_to 'Friends', member_friendships_path(@member), class: 'btn' %>
 <%= link_to 'Add Friend', new_member_friendship_path(@member), class: 'btn' %>
+<%= link_to 'Find Expert', member_experts_path(@member), class: 'btn' %>
 
 <div class='card'>
   <div class='card-content'>
